[gd_scene load_steps=25 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://testbox.vox" type="ArrayMesh" id=2]
[ext_resource path="res://addons/MagicaVoxelImporter/VoxelMesh.gd" type="Script" id=3]
[ext_resource path="res://testbig.vox" type="ArrayMesh" id=4]
[ext_resource path="res://car.vox" type="ArrayMesh" id=5]
[ext_resource path="res://c2.vox" type="ArrayMesh" id=6]
[ext_resource path="res://c1.vox" type="ArrayMesh" id=7]
[ext_resource path="res://magicavoxel-samples/castle.vox" type="ArrayMesh" id=8]
[ext_resource path="res://magicavoxel-samples/monu9.vox" type="ArrayMesh" id=9]
[ext_resource path="res://magicavoxel-samples/nature.vox" type="ArrayMesh" id=10]
[ext_resource path="res://magicavoxel-samples/8x8x8.vox" type="ArrayMesh" id=11]
[ext_resource path="res://magicavoxel-samples/chr_old.vox" type="ArrayMesh" id=12]
[ext_resource path="res://magicavoxel-samples/doom.vox" type="ArrayMesh" id=13]
[ext_resource path="res://magicavoxel-samples/shelf.vox" type="ArrayMesh" id=14]
[ext_resource path="res://magicavoxel-samples/3x3x3.vox" type="ArrayMesh" id=15]
[ext_resource path="res://magicavoxel-samples/chr_knight.vox" type="ArrayMesh" id=16]
[ext_resource path="res://magicavoxel-samples/teapot.vox" type="ArrayMesh" id=17]
[ext_resource path="res://c1_t.vox" type="ArrayMesh" id=18]
[ext_resource path="res://gestures/c1_t/Shuffling.dae" type="PackedScene" id=19]

[sub_resource type="QuadMesh" id=1]
size = Vector2( 5, 5 )

[sub_resource type="Environment" id=2]
ambient_light_color = Color( 0.07, 0.07, 0.07, 1 )

[sub_resource type="Animation" id=3]
length = 10.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Position3D:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 360, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 28.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("MeshInstance:mesh")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 6.2, 12.6, 18 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ null, ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MeshInstance2:mesh")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3.1, 7.3, 11.6, 16.8, 18 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 4 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MeshInstance3:mesh")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 5, 6.9, 15.6, 18 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 5 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 15 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Position3D/Camera:translation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 9.4, 12.9, 28 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 1.49012e-08, 0.360911, -0.652091 ), Vector3( 1.49012e-08, 0.360911, -0.652091 ), Vector3( -1.75089e-07, 0.959857, -2.59255 ), Vector3( -1.75089e-07, 0.959857, -2.59255 ) ]
}

[sub_resource type="MultiMesh" id=5]
transform_format = 1
mesh = ExtResource( 7 )

[node name="Spatial" type="Spatial"]
script = ExtResource( 1 )

[node name="Floor" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -0.000387311, -0.0072822, -0.00232768 )
mesh = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.025, 0, 0, 0, 0.025, 0, 0, 0, 0.025, 0, 0.0145142, 0 )
cast_shadow = 0
mesh = ExtResource( 2 )
script = ExtResource( 3 )

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( 0.025, 0, 0, 0, 0.025, 0, 0, 0, 0.025, 0.42993, 0.0145142, 0 )
cast_shadow = 0
mesh = ExtResource( 4 )
script = ExtResource( 3 )

[node name="MeshInstance3" type="MeshInstance" parent="."]
transform = Transform( 0.025, 0, 0, 0, 0.025, 0, 0, 0, 0.025, -0.451051, 0.0140076, 0 )
cast_shadow = 0
mesh = ExtResource( 5 )
script = ExtResource( 3 )

[node name="MeshInstance4" type="MeshInstance" parent="."]
transform = Transform( -0.012, 0, -1.81195e-09, 0, 0.012, 0, 1.81195e-09, 0, -0.012, 0.25, 0.014514, 0.25 )
cast_shadow = 0
mesh = ExtResource( 6 )
script = ExtResource( 3 )

[node name="MeshInstance5" type="MeshInstance" parent="."]
transform = Transform( -0.45, 0, -6.79481e-08, 0, 0.45, 0, 6.79481e-08, 0, -0.45, 0.744678, 0.00590316, 0.25 )
cast_shadow = 0
mesh = ExtResource( 18 )
skeleton = NodePath("../Shuffling/Skeleton")
script = ExtResource( 3 )

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0916136, 1.47898, -1.34932 )
shadow_enabled = true
shadow_bias = 0.2
shadow_contact = 0.01
omni_shadow_mode = 0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="Position3D" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0238543, 0.271873, 0 )

[node name="Camera" type="Camera" parent="Position3D"]
transform = Transform( -1, -7.45058e-09, -8.9407e-08, -2.57837e-08, 0.955518, 0.294932, 8.9407e-08, 0.294932, -0.955518, 1.49012e-08, 0.360911, -0.652091 )

[node name="OmniLight2" type="OmniLight" parent="Position3D/Camera"]
transform = Transform( -1, -2.57837e-08, 8.35341e-08, -2.44249e-15, 0.955519, 0.294931, -8.74228e-08, 0.294931, -0.955519, -0.288927, -0.330919, 0.818452 )
omni_range = 4.61491

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "demo"
anims/demo = SubResource( 3 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
autoplay = "Demo"
anims/Demo = SubResource( 4 )

[node name="MultiMeshInstance" type="MultiMeshInstance" parent="."]
visible = false
multimesh = SubResource( 5 )

[node name="Bench" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_bottom = 25.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Bench"]
margin_top = 5.0
margin_bottom = 19.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacer" type="Control" parent="Bench"]
margin_left = 4.0
margin_right = 298.0
margin_bottom = 25.0
size_flags_horizontal = 3

[node name="LODBias" type="Label" parent="Bench"]
margin_left = 302.0
margin_top = 5.0
margin_right = 373.0
margin_bottom = 19.0
text = "LOD Bias 1"

[node name="LODBiasSlider" type="HSlider" parent="Bench"]
margin_left = 377.0
margin_right = 672.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 20.0
step = 0.25
page = 1.0
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FastCheckButton" type="CheckBox" parent="Bench"]
margin_left = 676.0
margin_right = 730.0
margin_bottom = 25.0
text = "Fast"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FarSpacingCheckButton" type="CheckBox" parent="Bench"]
margin_left = 734.0
margin_right = 833.0
margin_bottom = 25.0
text = "Far Spacing"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2CheckButton" type="CheckBox" parent="Bench"]
margin_left = 837.0
margin_right = 936.0
margin_bottom = 25.0
text = "Far Camera"

[node name="BenchmarkButton" type="Button" parent="Bench"]
margin_left = 940.0
margin_right = 1024.0
margin_bottom = 25.0
toggle_mode = true
text = "Benchmark"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BenchmarkPos" type="Position3D" parent="."]
transform = Transform( -0.923686, -0.0878119, 0.372953, -7.57103e-08, 0.973383, 0.229183, -0.383151, 0.211693, -0.8991, -0.467912, 0, 0 )

[node name="Camera" type="Camera" parent="BenchmarkPos"]
transform = Transform( 1, -7.45058e-09, -2.98023e-08, 0, 1, -4.47035e-08, 2.98023e-08, 0, 1, -0.559267, 0.194, 3.69177 )

[node name="Camera2" type="Camera" parent="BenchmarkPos"]
transform = Transform( 1, -1.49012e-07, 2.98023e-07, -1.49012e-08, 1, 8.9407e-08, 1.78814e-07, -5.96046e-08, 1, -0.559, 0.194, 99 )

[node name="Light" type="OmniLight" parent="BenchmarkPos"]
transform = Transform( 1, 3.55271e-15, 7.10543e-15, -3.55271e-15, 1, 0, 7.10543e-15, 0, 1, -1.76996e-06, -0.172219, 6.00691 )
visible = false
omni_range = 7.46877

[node name="Shuffling" parent="." instance=ExtResource( 19 )]

[node name="unamed" parent="Shuffling/Skeleton" index="0"]
visible = false

[node name="AnimationPlayer" parent="Shuffling" index="1"]
autoplay = "default"
next/default = "default"

[connection signal="value_changed" from="Bench/LODBiasSlider" to="." method="_on_LODBiasSlider_value_changed"]
[connection signal="toggled" from="Bench/FastCheckButton" to="." method="_on_FastCheckButton_toggled"]
[connection signal="toggled" from="Bench/FarSpacingCheckButton" to="." method="_on_FarSpacingCheckButton_toggled"]
[connection signal="toggled" from="Bench/Camera2CheckButton" to="." method="_on_Camera2CheckButton_toggled"]
[connection signal="toggled" from="Bench/BenchmarkButton" to="." method="_on_BenchmarkButton_toggled"]

[editable path="Shuffling"]
